# Epitech

./: README.md
Year_1/: README.md
Year_1/B-AIA-200-LIL-2-1-n4s/: Makefile  change_speed.c  check_lap.c  get_stdin.c  ia.c  init_struct.c  main.c  recup_lidar.c  turning.c  wheels_dir.c
Year_1/B-CPE-110-LIL-1-1-BSQ/: Makefile  board_generator.pl.txt  bsq.c  main.c  tableau.c
Year_1/B-CPE-200-LIL-2-1-dante/: .gitignore  Makefile  README.md  map1.txt
Year_1/B-CPE-200-LIL-2-1-matchstick/: Makefile  bot.c  check_input_player.c  example.txt.txt  game.c  init_variables.c  main.c  map.c  matchstick  player.c
Year_1/B-CPE-210-LIL-2-1-stumper2/: Makefile  error.c  main.c  map.c
Year_1/B-MUL-100-LIL-1-1-myrunner/: Makefile  anim.c  background.c  bushes.c  check_game.c  clouds.c  destroy.c  enemies.c  floor.c  help.c  init_struct.c  init_struct2.c  main.c  map1.txt  mountains.c  perso.c  score.c  shoot.c  wall.c  window.c
Year_1/B-MUL-200-LIL-2-1-mydefender/: Makefile  change_zomb.c  clocks.c  display.c  event.c  free.c  help.c  hover.c  hover_pause.c  how_to_play.c  icones_perso.c  init_variables.c  load_sprite.c  loading.c  loading2.c  loops.c  main.c  mouse_hover.c  music.c  my_defender  positions.c  positions2.c  select_plant.c  sun.c  zomb.c  zomb2.c  zombie.c
Year_1/B-MUL-200-LIL-2-1-myrpg/: .gitignore  Makefile
Year_1/B-PSU-100-LIL-1-1-myls/: Makefile  main.c
Year_1/B-PSU-100-LIL-1-1-myprintf/: Makefile
Year_1/B-PSU-200-LIL-2-1-mysokoban/: Makefile  boxes.c  cursor.c  endgame.c  gameloop.c  interactions.c  loading.c  main.c  map.c  objectives.c
Year_1/B-PSU-210-LIL-2-1-minishell2/: Makefile  built_cd.c  builtins.c  check_pipe.c  clean.c  env.c  error.c  exec.c  exit.c  get_cmd.c  init_var.c  main.c  mysh  parse.c  path.c  pipe.c  pipe_exec.c  pipe_exec2.c  redir_left.c  redir_right.c  setenv.c  unsetenv.c  valid_pipe.c  valid_redir.c
Year_2/: README.md
Year_2/B-ASM-400-LIL-4-1-asmminilibc/: memcpy.asm  memset.asm  strchr.asm  strrchr.asm
Year_2/B-ASM-400-LIL-4-1-asmminilibc-anthony.becarne/: .gitignore  Makefile  memmove.asm  strcmp.asm  strlen.asm  strncmp.asm
Year_2/B-CNA-410-LIL-4-1-groundhog/: Makefile  error.py  groundhog.py  printValues.py
Year_2/B-CNA-410-LIL-4-1-groundhog-anthony.becarne/: calculs.py
Year_2/B-CNA-410-LIL-4-1-trade/: Makefile  trade.py
Year_2/B-DOP-400-LIL-4-1-mymarvin-gregoire.biendine/: my_marvin.yml
Year_2/B-DOP-400-LIL-4-1-octopus/: poll.tar  result.tar
Year_2/B-DOP-400-LIL-4-1-octopus-gregoire.biendine/: playbook.yml  worker.tar
Year_2/B-NWP-400-LIL-4-1-myftp/: .gitignore
Year_2/B-NWP-400-LIL-4-1-myftp-anthony.becarne/: Makefile
Year_2/B-NWP-400-LIL-4-1-myteams/: Doxyfile
Year_2/B-NWP-400-LIL-4-1-myteams-anthony.becarne/: .gitignore  Makefile  protocol.txt
Year_2/B-OOP-400-LIL-4-1-arcade/: .gitignore  Makefile
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/: CMakeLists.txt  main.cpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/assets/loading/: loading1.mov
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/assets/models/maps/chinease/: mapInfos.json
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/include/menu/: CreateProfile.hpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/include/objects/models/: StaticModels.hpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/src/entities/characters/: Players.cpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/src/game/assets/: GameAssets.cpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/src/menu/: LandingMenu.cpp  LoadingScreen.cpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/src/objects/: Button.cpp  Image.cpp
Year_2/B-YEP-400-LIL-4-1-indiestudio-eliott.avetand/bonus/src/text/: Text.cpp
(+949 files in other folders)
